Hide warnings on JDK 25
The warnings are ok for now. We need to wait for asciidoctorJ 4, which
will use jRuby 10. This in turn will get rid of the warnings.